--- a/apps/static-website/package.json
+++ b/apps/static-website/package.json
@@ -8,7 +8,13 @@
     "build": "vite build",
     "preview": "vite preview"
   },
+  "dependencies": {
+    "vue": "^3.3.4"
+  },
   "devDependencies": {
+    "@vitejs/plugin-vue": "^4.2.3",
+    "@vue/eslint-config-prettier": "^8.0.0",
+    "@vue/test-utils": "^2.4.1",
     "sass": "^1.66.1",
     "vite": "^4.4.5"
   }
