--- a/apps/static-website/package.json
+++ b/apps/static-website/package.json
@@ -15,6 +15,8 @@
     "@vitejs/plugin-vue": "^4.2.3",
     "@vue/eslint-config-prettier": "^8.0.0",
     "@vue/test-utils": "^2.4.1",
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.31",
     "sass": "^1.66.1",
     "vite": "^4.4.5"
   }
